Fix send message and send mail actions